# cam_imu_sync

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
include/imu_cam_sync/: TimestampBuff.hpp  bytes_utils.hpp  ic_sync_nodelet.hpp  ic_sync_serial.hpp  thread_utils.hpp
launch/: cam_imu_sync_launch.launch  node_launch.launch  nodelet_default.launch  nodelet_with_vcam.launch
msg/: ICtrigger.msg
src/: ic_sync_nodelet.cpp  ic_sync_serial.cpp  imu_cam_sync_node.cpp
srv/: cmd_imu.srv
